--- a/app.wxss
+++ b/app.wxss
@@ -1,6 +1,6 @@
 /**app.wxss**/
 .container {
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,3 +8,14 @@
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+.centered{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+}
+.vertical.centered > view{
+  display:flex;
+  flex-direction:row;
+  height:100vh;
+  align-items:center;
+}
